# ITIF

./: README.md
FasterTransformer-5.0/examples/cpp/ITIF_example/: multistream.cc  multistream_vit.cc  vit_test.cc
FasterTransformer-5.0/src/: CMakeLists.txt
FasterTransformer-5.0/src/ITIF/: CMakeLists.txt  ITIF.cc
FasterTransformer-5.0/src/fastertransformer/kernels/: CMakeLists.txt  changed_layer_norm.cu  changed_layer_norm.h
FasterTransformer-5.0/src/fastertransformer/layers/itif/: CMakeLists.txt  encoder.h
FasterTransformer-5.0/src/fastertransformer/models/new_vit/: CMakeLists.txt  new_vit.h
examples/cpp/: CMakeLists.txt
examples/cpp/ITIF_example/: CMakeLists.txt  bert_albert.cc  mps.cc
src/ITIF/: ITIF.cc  ITIF.h
src/fastertransformer/layers/itif/: encoder.cc
src/fastertransformer/models/: CMakeLists.txt
src/fastertransformer/models/new_vit/: new_vit.cc
